Combine imgs into their owndirectory

--- a/manifest.json
+++ b/manifest.json
@@ -5,13 +5,13 @@
   "description": "This extension allows user to save oft-used links to use in messages and documents",
   "version": "1.0",
 
-  "icons": { "16": "icon16.png",
-              "32": "icon32.png",
-           "64": "icon64.png",
-          "128": "icon128.png" },
+  "icons": { "16": "imgs/icon16.png",
+              "32": "imgs/icon32.png",
+           "64": "imgs/icon64.png",
+          "128": "imgs/icon128.png" },
 
   "browser_action": {
-    "default_icon": "icon128.png",
+    "default_icon": "imgs/icon128.png",
     "default_popup": "popup.html",
     "default_title": "Easy access to common links"
   },
