--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,10 @@
   "manifest_version": 2,
 
   "name": "Easy Link Access",
+  "short_name": "Save and Copy Your Favorites",
   "description": "This extension allows user to save oft-used links to use in messages and documents",
-  "version": "1.0",
+  "version": "0.0.0.1",
+  "author": "Kim Allen",
 
   "icons": { "16": "imgs/icon16.png",
               "32": "imgs/icon32.png",
@@ -15,14 +17,6 @@
     "default_popup": "popup.html",
     "default_title": "Easy access to common links"
   },
-
-  // "content_scripts": [
-  //   {
-  //     "matches": ["http://www.google.com/*"],
-  //     "css": ["style.css"]
-  //     "js": ["jquery-3.1.1.min.js", "popup.js"]
-  //   }
-  // ],
 
   "permissions": [
     "activeTab",
